--- a/view/users/register.ejs
+++ b/view/users/register.ejs
@@ -14,7 +14,7 @@
             height: 1rem;
             margin-right: 8px;
             border: 2px solid transparent;
-            border-top: 2px solid #ffffff;
+            border-top: 2px solid var(--color-info);
             border-radius: 50%;
             animation: spin 1s linear infinite;
         }
