--- a/public/css/Nav_footer.css
+++ b/public/css/Nav_footer.css
@@ -273,7 +273,7 @@ nav .user_cd-profile{
     gap:0.5em;
     padding:0.5em 1em;
     i{
-        color: var(--color-link);
+        color: var(--color-text-muted);
     }
     span{
         color: var(--color-text-primary);
@@ -366,7 +366,7 @@ nav .user_cd-profile{
     position: fixed;
     top:3.5em;
     right:-15em;
-    box-shadow:  0 0 0.1em var(--color-info);
+    box-shadow:  0 0 0.1em var(--color-info); 
 }
 .small_scr_side .userProfile_box , .userCard_box{
     position: relative;
@@ -493,6 +493,12 @@ nav .user_cd-profile{
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
+}
+.supportSectionOptionBox p{
+  color: var(--color-text-primary);
+}
+.supportSectionOptionBox p span , address{
+    color: var(--color-text-primary-low);
 }
 /* Social Midea Links Stylling Start Here */
 .socialmediaLinksOption{
